Fix loader bar not showing up

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -72,7 +72,7 @@
   position: absolute
   right: 0
   top: 0
-  z-index: 2
+  z-index: 99
 
   visibility: hidden
   opacity: 0
